--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,9 +12,7 @@ jobs:
           python-version: 3.11.5
           cache: "pip"
       - name: "installation"
-        run: pip install black
-      - name: "installation"
-        run: pip install pytest
+        run: pip install black pytest
       - name: "black"
         run: black . --check --diff --color
       - name: "pytest"
